tests/valid/teste_swith.lang
//Switch case 

int x = 2;
switch (x) {
    case 1: printf(10);
    case 2: printf(20);
    default: printf(30);
}
