tests/invalid/redeclaracao.lang
int x;
x = 10;
int x; // Erro: x jรก existe
x = 20;